name:              betty
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Custom

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Betty.SESCreds

    other-modules: Handler.Home
                   Handler.Info
                   Handler.Info.About
                   Handler.Info.Contact
                   Handler.Info.Privacy
                   Handler.Info.Terms
                   Handler.Info.Security
                   Handler.Profile
                   Handler.ProfileStart
                   Handler.AddBG
                   Handler.HistoryBG
                   Handler.Api
                   Handler.Api.V0.SugarAdd
                   Handler.Api.V0.SugarGet
                   Handler.Api.V0.SugarEdit
                   Handler.Api.V0.SugarDelete
                   Handler.Api.V0.UserGet
                   Betty.Version
                   Betty.Signup
                   Betty.Signup.MailText
                   Betty.Signup.SES
                   Betty.Signup.Sendmail
                   Betty.Model
                   Betty.Helpers
                   Betty.Vendor
                   Betty.Pid

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        cpp-options:   -DUSE_AWS_SES
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                TypeSynonymInstances

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4        && < 1.5
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , blaze-html
                 , mime-mail
                 , mime-mail-ses
                 , time
                 , directory
                 , http-types
                 , resourcet

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         betty
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , betty
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    other-modules:      HomeTest
                      , TestImport
                      , TestTools

    build-depends: base       >= 4          && < 5
                 , betty
                 , yesod-test
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , blaze-html
                 , mime-mail
                 , mime-mail-ses
                 , http-conduit
                 , http-types                 
                 , network-uri
                 , wai-extra
                 , bytestring
                 , text
