name:              betty
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Custom

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
            
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Betty.SESCreds

    other-modules: Handler.Home
                   Handler.Common
                   Handler.Info
                   Handler.Info.About
                   Handler.Info.Contact
                   Handler.Info.Privacy
                   Handler.Info.Terms
                   Handler.Info.Security
                   Handler.Profile
                   Handler.ProfileStart
                   Handler.ProfileBGUnit                   
                   Handler.AddBG
                   Handler.HistoryBG
                   Handler.Api
                   Handler.Api.V0.Sugar
                   Handler.Api.V0.User
                   Handler.ResetToken
                   Import.NoFoundation
                   Settings.StaticFiles                   
                   Betty.Version
                   Betty.Signup
                   Betty.Signup.MailText
                   Betty.Signup.SES
                   Betty.Signup.Sendmail
                   Betty.Model
                   Betty.Helpers
                   Betty.Vendor
                   Betty.Pid
                   Betty.Token
                   Betty.Auth
                   Betty.DateTime
                   Paths_betty

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        cpp-options:   -DUSE_AWS_SES
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances                
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                TypeSynonymInstances
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4        && < 1.5
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , blaze-html
                 , mime-mail
                 , mime-mail-ses
                 , time
                 , directory
                 , http-types
                 , resourcet
                 , wai
                 , base64-bytestring
                 , persistent
                 , yesod-persistent
                 , attoparsec
                 , mwc-random
                 , vector
                 , file-embed
                 , case-insensitive
                 , gitrev

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         betty
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , betty
                     , foreign-store

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
    -- cpp-options:       -DUSE_AWS_SES

    other-modules:     HomeSpec
                       CommonSpec
                       SESSpec
                       TestImport
                       TestTools
                       Handler.ProfileBGUnitSpec

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base       >= 4          && < 5
                 , betty    
                 , yesod-test
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare                 
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , blaze-html
                 , mime-mail
                 , mime-mail-ses
                 , http-conduit
                 , http-types                 
                 , network-uri
                 , wai-extra
                 , bytestring
                 , text
